overflow x fix iphone

--- a/music-project/style/style.css
+++ b/music-project/style/style.css
@@ -168,6 +168,7 @@ button {
   flex-direction: column;
   justify-content: flex-end;
   height:100%;
+  overflow-x:hidden
 }
 
 
